# costforecast-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
api/: main.py
app/: streamlit_app.py
docs/: generate_pdf.py  informe.md  security_note.md
infra/: Modelfile  architecture.md  generate_diagram.py
notebooks/: 01_EDA.ipynb
src/costforecast/: __init__.py  config.py  logger.py
src/costforecast/agent/: __init__.py  gemma_agent.py  graph.py  tools.py
src/costforecast/data/: __init__.py  consolidator.py  loader.py  profiling.py  quality.py
src/costforecast/evaluation/: __init__.py  backtest.py
src/costforecast/explainability/: __init__.py  shap_wrapper.py
src/costforecast/features/: __init__.py  engineering.py
src/costforecast/forecasting/: __init__.py  generate.py
src/costforecast/models/: __init__.py  baseline.py  prophet_model.py  sarimax_model.py  train_all.py  xgboost_model.py
tests/: conftest.py  test_agent.py  test_backtest.py  test_consolidator.py  test_data_loader.py  test_features.py  test_models_baseline.py  test_models_prophet.py  test_models_sarimax.py  test_models_xgboost.py
