[project]
name = "costforecast-ai"
version = "0.1.0"
description = "Forecasting de costos de equipos de construcción basado en precios de materias primas, con agente de IA para análisis contextual."
authors = [
    { name = "Santiago Rueda", email = "santiago.rueda@example.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
keywords = ["forecasting", "time-series", "ai-agent", "construction", "commodities"]

dependencies = [
    # Core data stack
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",               # parquet
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Statistical analysis
    "scipy>=1.12.0",
    "statsmodels>=0.14.1",           # SARIMAX, tests estacionariedad, Granger
    "scikit-learn>=1.4.0",

    # Forecasting models
    "prophet>=1.1.5",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",

    # Explainability
    "shap>=0.44.0",

    # Visualización
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.19.0",

    # EDA automático
    "ydata-profiling>=4.7.0",

    # Agente IA — Claude (Anthropic)
    "langgraph>=0.0.40",
    "langchain>=0.1.20",
    "langchain-anthropic>=0.1.15",
    "langchain-community>=0.0.38",
    "tavily-python>=0.3.3",

    # Agente IA — Gemma (open source, Ollama)
    "langchain-ollama>=0.2.0",
    "duckduckgo-search>=6.0.0",

    # UI y API
    "streamlit>=1.33.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    # Utilidades
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
]

aws = [
    "boto3>=1.34.0",
    "sagemaker>=2.215.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/costforecast"]

# ---------------- Ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line-too-long handled por formatter

# ---------------- Black ----------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------- MyPy ----------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# ---------------- Pytest ----------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src/costforecast --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
